<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="andrej.jelic.attendance.FinishedFragment"
    style="@style/BackgroundTema">

    <LinearLayout
        style="@style/Tema">

        <TextView
            android:id="@+id/text_started_fragment_finished"
            style="@style/textView"
            android:text="@string/started" />

        <TextView
            android:id="@+id/view_start_time_fragment_finished"
            style="@style/textView"/>

        <TextView
            android:id="@+id/text_ended_fragment_finished"
            style="@style/textView"
            android:text="@string/ended" />

        <TextView
            android:id="@+id/view_end_time_fragment_finished"
            style="@style/textView"/>

        <TextView
            android:id="@+id/text_student_present_fragment_finished"
            style="@style/textView"
            android:text="@string/students_present" />

        <TextView
            android:id="@+id/view_student_present_fragment_finished"
            style="@style/textView"/>

        <Button
            android:id="@+id/button_generate"
            style="@style/Button"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>
