<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundTema"
    tools:context="andrej.jelic.attendance.StartedNowFragment">

    <LinearLayout

        style="@style/Tema">

        <TextView
            android:id="@+id/text_start_time_fragment_now"
            style="@style/textView"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/view_start_time_fragment_now"
            style="@style/textView" />

        <TextView
            android:id="@+id/text_student_present_fragment_now"
            style="@style/textView"
            android:text="@string/students_present" />

        <TextView
            android:id="@+id/view_student_present_fragment_now"
            style="@style/textView" />

        <ProgressBar
            android:id="@+id/progressBar_fragment_now"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="5dip"
            android:minHeight="5dip"
            android:visibility="invisible" >
        </ProgressBar>

        <TextView
            style="@style/textView.State"
            android:id="@+id/title_fragment_now" />

        <Button
            android:id="@+id/button_end_now_fragment_now"
            style="@style/Button"
            android:text="@string/end_now" />

    </LinearLayout>


</LinearLayout>

